# opencv_light_correction

./: CMakeLists.txt  README.md  lightcorrector.cpp  lightcorrector.h  main.cpp
